# portfolio

./: CNAME  Cargo.toml  flake.nix  index.html  portfolio_website.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  main.rs
src/app/: desktop.rs  entries.rs  mobile.rs  mod.rs
